--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="br.com.pontocertosportes.pontocertoesportes">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -16,9 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logotipo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activity.ListProductActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +29,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConfFornecedorActivity" />
-        <activity android:name=".ConfClienteActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".produto"></activity>
+        <activity android:name=".Activity.ConfFornecedorActivity" />
+        <activity android:name=".Activity.ConfClienteActivity" />
+        <activity android:name=".Activity.HomeActivity" />
+        <activity android:name=".Activity.ProductActivity" />
+        <activity android:name=".Activity.LoginActivity"></activity>
     </application>
 
 </manifest>
