--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
         <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.ProductActivity" />
         <activity android:name=".Activity.LoginActivity" />
-        <activity android:name=".Activity.ListClientsActivity"></activity>
+        <activity android:name=".Activity.ListClientsActivity" />
+        <activity android:name=".Activity.EditClient" />
+        <activity android:name=".Activity.EditProdutoActivity" />
+        <activity android:name=".Activity.ConfEstoqueActivity" />
+        <activity android:name=".Activity.ConfProductActivity"></activity>
     </application>
 
 </manifest>
