--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Activity.ListProductActivity"
+            android:name=".Activity.LoginActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,10 +33,10 @@
         <activity android:name=".Activity.ConfClienteActivity" />
         <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.ProductActivity" />
-        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".Activity.ListProductActivity" />
         <activity android:name=".Activity.ListClientsActivity" />
-        <activity android:name=".Activity.EditClient" />
-        <activity android:name=".Activity.EditProdutoActivity" />
+        <activity android:name=".Activity.ViewClientActivity" />
+        <activity android:name=".Activity.ViewProdutoActivity" />
         <activity android:name=".Activity.ConfEstoqueActivity" />
         <activity android:name=".Activity.ConfProductActivity"></activity>
     </application>
