Tela Vendas Finalizada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".Activity.ConfProductActivity" />
         <activity android:name=".Activity.SelectIconUser" />
         <activity android:name=".Activity.realizarVendas" />
+        <activity android:name=".Activity.list_fornecedores" />
+        <activity android:name=".adapter_fornecedores"></activity>
     </application>
 
 </manifest>
