--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Activity.HomeActivity"
+            android:name=".Activity.LoginActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
         </activity>
         <activity android:name=".Activity.ConfFornecedorActivity" />
         <activity android:name=".Activity.ConfClienteActivity" />
-        <activity android:name=".Activity.LoginActivity" />
+        <activity android:name=".Activity.HomeActivity" />
         <activity android:name=".Activity.ListProductActivity" />
         <activity android:name=".Activity.ListClientsActivity" />
         <activity android:name=".Activity.ViewClientActivity" />
@@ -41,7 +41,7 @@
         <activity android:name=".Activity.SelectIconUser" />
         <activity android:name=".Activity.realizarVendas" />
         <activity android:name=".Activity.list_fornecedores" />
-        <activity android:name=".adapter_fornecedores"></activity>
+        <activity android:name=".adapter_fornecedores" />
     </application>
 
 </manifest>
